========================
[] New preference to word wrap the Notes field in Add & Edit. Also,
ability to override this and showing the notes by right-click context
menu.
[] Add new field 'Execute String' to allow commands etc. to be executed
via Ctrl+E or menu.  See help for details.
[] Support AutoType with 'Browse to URL' and new 'Execute String' functions.
See help for details.

Bugs fixed in 3.16.1
====================
[2599930] All fields, buttons, checknoxes that could change an entry's
data are disabled if the database is in read-pnly mode.
[] Lock on Windows Lock works again.
[] Ctrl+F sets focus to the find string edit box.
[] No longers asks for confirmation of Cancel during Edit in read only
mode as that is the only option available to the user.
[] Right-click context menu now correct when user hides toolbars.

Bugs fixed in 3.16
==================
[2529736] Validate now corrects all Password History errors
[2509817] Control characters no longer sent via Autotype.
[2481370] Can now create shortcut by right-mouse down dragging.
[2423397] Sorting direction database preference was not being saved in
the database.  See "Changes to Existing Features" below.
[] Can now process filters (within the database or imported) based on
'username' field ("user" in the XML file).

Changes to Existing Features in 3.16
=======================================
[2423397] Changes to preferences stored in the database are no longer
silently saved in the database (including any changes to any entries).
A new flag is shown in the Status Bar to indicate the preferences have
been changed and the user can decide to save these, or not, when closing
the database, directly or when ending the application.
[Open Discussion] Ctrl+F no longer toggles the Find Toolbar but shows
it if not currently visible.
[] Support interoperability with tools that access edit control text
by setting PWS_PW_MODE environment variable to "NORMAL".

New Features for 3.16
========================