@@ -125,8 +125,8 @@ BEGIN
         MENUITEM "Nested &Tree",                ID_MENUITEM_TREE_VIEW, MFT_STRING, MFS_CHECKED
         MENUITEM "", 0, MFT_SEPARATOR
         MENUITEM "Toolbar &visible",            ID_MENUITEM_SHOWHIDE_TOOLBAR, MFT_STRING, MFS_CHECKED
-        MENUITEM " &New Toolbar",               ID_MENUITEM_NEW_TOOLBAR, MFT_STRING, MFS_CHECKED
-        MENUITEM " &Classic Toolbar",           ID_MENUITEM_OLD_TOOLBAR, MFT_STRING, MFS_CHECKED
+        MENUITEM "&New Toolbar",                ID_MENUITEM_NEW_TOOLBAR, MFT_STRING, MFS_CHECKED
+        MENUITEM "&Classic Toolbar",            ID_MENUITEM_OLD_TOOLBAR, MFT_STRING, MFS_CHECKED
         MENUITEM "&Dragbar visible",            ID_MENUITEM_SHOWHIDE_DRAGBAR, MFT_STRING, MFS_CHECKED
         MENUITEM "", 0, MFT_SEPARATOR
         MENUITEM "Expand All\tCtrl+Alt+Plus",   ID_MENUITEM_EXPANDALL, MFT_STRING
@@ -375,6 +375,7 @@ BEGIN
     VK_ADD,         ID_MENUITEM_EXPANDALL,  VIRTKEY, CONTROL, ALT
     VK_SUBTRACT,    ID_MENUITEM_COLLAPSEALL, VIRTKEY, CONTROL, ALT
     VK_F3,          ID_TOOLBUTTON_FIND,     VIRTKEY
+    VK_F3,          ID_TOOLBUTTON_FINDUP,   VIRTKEY, SHIFT
     VK_F4,          ID_MENUITEM_CLOSE,      VIRTKEY, CONTROL
     VK_F4,          ID_MENUITEM_EXIT,       VIRTKEY, ALT
     VK_F5,          ID_MENUITEM_REFRESH,    VIRTKEY
